# cmax_slam

./: CMakeLists.txt  LICENSE  README.md  dependencies.yaml  package.xml
docs/: DAVIS-00000254.yaml  installation.md  live_demo.md  patermeters.md  test_datasets.md
include/: cmax_slam.h
include/backend/: equirectangular_camera.h  event_pano_warper.h  global_focus_funcs.h  global_optim_contrast_gsl.h  pose_graph_optimizer.h  trajectory.h
include/frontend/: ang_vel_estimator.h  local_focus_funcs.h
include/utils/: image_geom_util.h  image_utils.h  parameters.h
launch/: ecrot_handheld.launch  ecrot_mount.launch  ecrot_synth.launch  ijrr.launch  live_davis.launch
src/: cmax_slam.cpp  node.cpp
src/backend/: event_pano_warper.cpp  global_focus_funcs.cpp  global_optim_contrast_gsl.cpp  global_optim_contrast_gsl_analytical.cpp  pose_graph_optimizer.cpp  trajectory.cpp
src/frontend/: ang_vel_estimator.cpp  local_focus_funcs.cpp  local_image_warped_events.cpp  local_optim_contrast_gsl.cpp
src/utils/: image_geom_util.cpp  image_utils.cpp
